# BrytonSync

./: .gitignore  changelog.md  readme.md
android/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
android/brytonsync/: bryton_client.py  cli.py  config.py  crypto.py  dropbox_client.py  intervals_client.py  sync.py
core/: .gitignore  README.md  requirements.txt  test_list.py  test_login.py
core/brytonsync/: __init__.py  bryton_workout_client.py  cli.py  config.py  crypto.py  dropbox_client.py  intervals_client.py  planned_workout_sync.py  sync.py  workout_converter.py  workout_fit_builder.py
tests/: fit_dump.txt  fit_dump_2.txt  fit_dump_hr.txt  test_bryton_workouts.py  test_build_fit.py  test_convert_workout.py  test_decode_fit.py  test_download_workout_fit.py  test_events.py  test_sync_planned_workouts.py  test_upload_workout.py
