[project]
name = "brytonsync"
version = "1.0.0"
description = "Bryton Active to intervals.icu and Dropbox sync app"
requires-python = ">=3.10"
dependencies = [
  "flet>=0.28.0",
  "requests>=2.31.0",
  "pycryptodome>=3.20.0",
  "dropbox>=12.0.0",
]

[tool.flet]
org = "com.manueloberti"
product = "BrytonSync"
copyright = "Copyright (C) 2026"
build_number = 1

[tool.flet.android]
adaptive_icon_background = "#101418"
adaptive_icon_foreground = "assets/icon.png"